--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -72,13 +72,18 @@
                                                 {
                                                     <a asp-action="EditAsset" asp-controller="Assets" asp-route-id="@Model.Asset.Id" class="ms-1" id="checkElement"><i class="fe fe-edit"></i></a>
                                                 }
-
+                                                if (User.IsInRole("Administrator"))
+                                                {
+                                                    <a asp-action="DeleteAsset" asp-controller = "Assets" asp-route-id="@Model.Asset.Id" class="float-end btn btn-danger-gradient">
+                                                        <i class="fa fa-trash"></i>&nbsp;Delete Asset
+                                                    </a>
+                                                }
                                             }
                                         </h4>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-body p-0" style="height:320px;">
+                            <div class="card-body p-0" style="height:340px;">
                                 <div class="border-top"></div>
                                 <div class="table-responsive p-5">
                                     <table class="table row table-borderless">
@@ -166,6 +171,11 @@
                                                 <td><strong>Specifications : </strong> @Model.Asset.Specifications</td>
                                             </tr>
                                         </tbody>
+                                        <tbody class="col-lg-12 col-xl-4 p-0 border-top-0">
+                                            <tr>
+                                                <td><strong>Status : </strong> @Model.Asset.AssetStatus.StatusName</td>
+                                            </tr>
+                                        </tbody>
                                     </table>
                                 </div>
                             </div>
@@ -238,7 +248,7 @@
                             <div class="card-header border-bottom">
                                 <h3 class="card-title">Asset History</h3>
                             </div>
-                            <div class="card-body" style="height:520px;">
+                            <div class="card-body" style="height:540px;">
                                 <ul class="task-list">
                                     @{
                                         int historyCount = Model.AssetHistory.Count;
@@ -252,7 +262,7 @@
                                                 <h6>@history.Description</h6>
                                                 <p class="text-muted fs-12">@formattedDate</p>
                                             </li>
-                                            if (nHistoryCounter == 5 && historyCount>5)
+                                            if (nHistoryCounter == 5 && historyCount > 5)
                                             {
                                                 <li>
                                                     <i class="task-icon bg-primary"></i>
@@ -336,7 +346,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="demo-gallery card">
-                            <div class="p-3 divShadow" >
+                            <div class="p-3 divShadow">
                                 <div class="float-start">
                                     <h5>Asset Picture Gallery</h5>
                                 </div>
