--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -107,7 +107,7 @@
                         </svg>
                         @newsfeed.Description
                     </span>
-                    
+
                     @Html.Raw("&nbsp; &nbsp; &nbsp;")
                 }
                 @if (Model.NewsFeed.Count > 0)
@@ -258,44 +258,48 @@
         <div class="row">
             <div class="row">
                 <div class="col-md-6 mb-3">
-                    <table id="tblCategories" class="table text-nowrap mb-0 table-bordered border-top border-bottom divShadow">
-                        <thead class="bg-primary-gradient ms-auto divShadow">
-                            <tr>
-                                <th class="text-white">Category</th>
-                                <th class="text-white">Number of Assets</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @{
-                                if (Model.CategoryAssets.Count > 0)
-                                {
-                                    foreach (var sca in Model.CategoryAssets)
+                    <div class="table-responsive">
+                        <table id="tblCategories" class="table text-nowrap mb-0 table-bordered border-top border-bottom divShadow">
+                            <thead class="bg-primary-gradient ms-auto divShadow">
+                                <tr>
+                                    <th class="text-white">Category</th>
+                                    <th class="text-white">Number of Assets</th>
+                                    <th class="text-white">Total Cost</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    if (Model.CategoryAssets.Count > 0)
+                                    {
+                                        foreach (var sca in Model.CategoryAssets)
+                                        {
+                                            <tr>
+                                                <td class="text-muted fs-15 fw-semibold">
+                                                    <a asp-action="AssetList" asp-controller="Assets"
+                                                       asp-route-id="@sca.Id"
+                                                       class="text-muted hover-effect">@sca.CategoryName</a>
+                                                </td>
+                                                <td class="text-muted fs-15 fw-semibold">@sca.TotalAssets</td>
+                                                <td class="text-muted fs-15 fw-semibold text-end">@sca.TotalCost.ToString("N2")</td>
+                                            </tr>
+                                        }
+                                        //<tr>
+                                        //    <td class="text-muted fs-15 fw-semibold"><span class="text-bold float-end">Total Assets Registered:</span></td>
+                                        //    <td class="text-muted fs-15 fw-semibold"><span class="text-bold">@Model.TotalAssets()</span></td>
+                                        //</tr>
+                                    }
+                                    else
                                     {
                                         <tr>
-                                            <td class="text-muted fs-15 fw-semibold">
-                                                <a asp-action="AssetList" asp-controller="Assets"
-                                                   asp-route-id="@sca.Id"
-                                                   class="text-muted hover-effect">@sca.CategoryName</a>
-                                            </td>
-                                            <td class="text-muted fs-15 fw-semibold">@sca.TotalAssets</td>
+                                            <td colspan="2">No Assets available!</td>
                                         </tr>
                                     }
-                                    //<tr>
-                                    //    <td class="text-muted fs-15 fw-semibold"><span class="text-bold float-end">Total Assets Registered:</span></td>
-                                    //    <td class="text-muted fs-15 fw-semibold"><span class="text-bold">@Model.TotalAssets()</span></td>
-                                    //</tr>
                                 }
-                                else
-                                {
-                                    <tr>
-                                        <td colspan="2">No Assets available!</td>
-                                    </tr>
-                                }
-                            }
 
-                        </tbody>
+                            </tbody>
 
-                    </table>
+                        </table>
+                    </div>
                 </div>
                 <div class="col-md-6 mt-5 container">
                     <div id="chart"></div>
