--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -16,6 +16,11 @@
     <!-- BOOTSTRAP CSS -->
     <link id="style" href="~/assets/plugins/bootstrap/css/bootstrap.min.css" asp-append-version="true" rel="stylesheet" />
 
+    
+    <!-- Bootstrap Datepicker CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
+
+
     <!--SELECT2-->
     <link href="~/assets/plugins/select2/css/select2.css" rel="stylesheet" asp-append-version="true" />
 
@@ -27,7 +32,6 @@
     <link href="~/assets/css/icons.css" rel="stylesheet" asp-append-version="true" />
 
     <!-- TELERIK THEME -->
-    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/themes/6.4.0/bootstrap/bootstrap-main.css" />
     <style>
         /* Gradient transparent - color - transparent */
         hr.customHR {
@@ -63,12 +67,16 @@
             opacity: 1;
         }
     </style>
-    <script src="https://kendo.cdn.telerik.com/2023.2.606/js/jquery.min.js"></script>
-
     @* Add the Kendo UI scripts: *@
-    <script src="https://kendo.cdn.telerik.com/2023.2.606/js/kendo.all.min.js"></script>
-    <script src="https://kendo.cdn.telerik.com/2023.2.606/js/kendo.aspnetmvc.min.js"></script>
-    <script src="~/assets/plugins/bootstrap-datepicker/js/datepicker.js"></script>
+    
+	<link href="https://kendo.cdn.telerik.com/themes/7.0.2/bootstrap/bootstrap-main.css" rel="stylesheet" type="text/css" />
+
+    @* <script src="~/assets/plugins/bootstrap-datepicker/js/datepicker.js"></script> *@
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+	<script src="https://cdn.kendostatic.com/2023.2.606/js/jquery.min.js"></script>
+	<script src="https://cdn.kendostatic.com/2023.2.606/js/jszip.min.js"></script>
+	<script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.all.min.js"></script>
+	<script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.aspnetmvc.min.js"></script>
 </head>
 <body class="app sidebar-mini ltr">
 
@@ -108,11 +116,15 @@
     <a href="#top" id="back-to-top"><i class="fa fa-long-arrow-up"></i></a>
 
     <!-- JQUERY JS -->
-    @*<script src="~/assets/js/jquery.min.js"></script>*@
+    @**@
 
-    <!-- BOOTSTRAP JS -->
-    <script src="~/assets/plugins/bootstrap/js/popper.min.js"></script>
+    <!-- Bootstrap JS (required) -->
     <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Bootstrap Datepicker JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
+    <script src="~/assets/plugins/bootstrap/js/popper.min.js"></script>
+
+    
 
     <!-- SIDE-MENU JS -->
     <script src="~/assets/plugins/sidemenu/sidemenu.js"></script>
@@ -131,7 +143,6 @@
     <script src="~/assets/plugins/datatable/js/dataTables.bootstrap5.js"></script>
     <script src="~/assets/plugins/datatable/js/dataTables.buttons.min.js"></script>
     <script src="~/assets/plugins/datatable/js/buttons.bootstrap5.min.js"></script>
-    <script src="~/assets/plugins/datatable/js/jszip.min.js"></script>
     <script src="~/assets/plugins/datatable/pdfmake/pdfmake.min.js"></script>
     <script src="~/assets/plugins/datatable/pdfmake/vfs_fonts.js"></script>
     <script src="~/assets/plugins/datatable/js/buttons.html5.min.js"></script>
